--- a/Zomato_basic_clone/index.html
+++ b/Zomato_basic_clone/index.html
@@ -22,9 +22,29 @@
         </ul>
     </header>
     <main>
+        <section>
         <img src="images/zomato.png" alt="">
         <p>Discover the best foods and drinks</p>
         <input type="text" placeholder="Search for restaurant, cuisine, or a dish">
+        </section>
+        <section>
+            <h2>Why Choose Us for Food Delivery?</h2>
+            <p>We make it easy to discover and enjoy delicious food, wherever you are.</p>
+            <div class="main-features">
+                <div class="feature">
+                    <h3>Fast Delivery</h3>
+                    <p>Our reliable delivery partners ensure your food reaches you in no time.</p>
+                </div>
+                <div class="feature">
+                    <h3>Variety of Choices</h3>
+                    <p>From local favorites to global cuisines, we offer a wide range of options to choose from.</p>
+                </div>
+                <div class="feature">
+                    <h3>Easy Payment</h3>
+                    <p>Pay seamlessly through multiple payment options, including cash on delivery.</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         Copyright &copy; | All rights reserved
